--- a/pom.xml
+++ b/pom.xml
@@ -4,15 +4,29 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <!--maven项目类型
+        jar 代表java项目，默认值
+        war 表示web项目
+        pom 代表父工程
+    -->
     <groupId>com.course.code</groupId>
     <artifactId>Chapter</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
+    <!--聚合-->
     <modules>
         <module>Chapter5</module>
+        <module>Chapter6</module>
     </modules>
 
+
+
+    <!--
+     1.依赖管理配置声明：声明配置，当前项目并不会直接引入jar包；
+     2.子项目继承父项目，子项目不能直接使用jar包，子项目想要用，必须声明才能使用
+     3.好处，有父工程管理版本，子工程部需要管理版本
+     -->
     <dependencyManagement>
         <dependencies>
             <!-- https://mvnrepository.com/artifact/org.testng/testng -->
@@ -20,10 +34,22 @@
                 <groupId>org.testng</groupId>
                 <artifactId>testng</artifactId>
                 <version>6.14.3</version>
-                <scope>test</scope>
+                <scope>compile</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
 
+    <!--全局变量声明，可以声明版本号-->
+    <properties>
+            <junit.version>4.12</junit.version>
+    </properties>
 
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/junit/junit -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
+        </dependency>
+    </dependencies>
 </project>
