--- a/pom.xml
+++ b/pom.xml
@@ -7,10 +7,9 @@
     <parent>
         <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter -->
         <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter</artifactId>
+        <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.3.0.RELEASE</version>
     </parent>
-
     <!--maven项目类型
         jar 代表java项目，默认值
         war 表示web项目
@@ -20,8 +19,7 @@
     <artifactId>Chapter</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
-
-    <!--聚合-->
+   <!--聚合-->
     <modules>
         <module>Chapter5</module>
         <module>Chapter6</module>
